<resources>
    <string name="app_name" translatable="false">中华字典</string>
    <string name="search_hanzi_hint" translatable="false">请输入查询汉字</string>
    <string name="search_chengyu_hint" translatable="false">请输入查询成语</string>
    <string name="pinyin_search" translatable="false">拼音查询</string>
    <string name="bushou_search" translatable="false">部首查询</string>
    <string name="chengyu_search" translatable="false">成语查询</string>
    <string name="tuwen_search" translatable="false">图文查询</string>
    <string name="one_sentence_every_day" translatable="false">每日一句</string>
    <string name="word_detail" translatable="false">文字详情</string>
    <string name="ocr">图片识别</string>
    <string name="search_history">历史记录</string>
    <string name="chengyu_detail">成语详情</string>
    <string name="setting">设置</string>
    <string name="collect">收藏</string>
    <string name="feedback">反馈</string>
    <string name="evaluate">好评</string>
    <string name="share">分享</string>
    <string name="about_us">关于我们</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>