<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_200"
    android:orientation="vertical"
    tools:context=".ChengyuSearchActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white">

        <ImageView
            android:id="@+id/chengyu_search_back_iv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:onClick="onClick"
            android:src="@mipmap/ic_back" />

        <TextView
            style="@style/TitleTextViewStyle"
            android:text="@string/chengyu_search" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp">

        <EditText
            android:id="@+id/chengyu_search_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/et_search_background"
            android:hint="@string/search_chengyu_hint"
            android:maxLength="4" />

        <ImageView
            android:id="@+id/chengyu_search_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:onClick="onClick"
            android:src="@mipmap/search" />

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/search_history"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <GridView
        android:id="@+id/chengyu_search_history_gv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:horizontalSpacing="3dp"
        android:numColumns="4"
        android:verticalSpacing="3dp" />

</LinearLayout>